# Grapgh_Viz_project

./: .gitignore  CMakeLists.txt  README.md
include/: CoreController.h  CoreDrawer.h  CoreGLWidget.h  CoreWindow.h  Cube.h  Node.h
include/data/: GrEdge.h  GrNode.h  Graph.h  GraphMLImporter.h  Manager.h
include/layout/: CoreDrawer.h  CoreGLWidget.h  Cube.h  Node.h
src/: CoreController.cpp  CoreDrawer.cpp  CoreGLWidget.cpp  CoreWindow.cpp  Cube.cpp  Node.cpp  main.cpp
src/data/: GrEdge.cpp  GrNode.cpp  Graph.cpp  GraphMLImporter.cpp  Manager.cpp
src/layout/: CoreDrawer.cpp  CoreGLWidget.cpp  Cube.cpp  Node.cpp
